InsuranceOrg/force-app/main/default/objects/vlocity_ins__DRBatchQueue__c/vlocity_ins__DRBatchQueue__c.object-meta.xml
<CustomObject>
    <description>Vlocity system object used as a queue for DataRaptor batches needing to be processed.</description>
    <label>Vlocity DataRaptor Batch Queue</label>
    <nameField>
        <label>DataRaptor Batch Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity DataRaptor Batch Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>