InsuranceOrg/force-app/main/default/objects/vlocity_ins__DRBatchQueue__c/fields/vlocity_ins__DRBundleName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DRBundleName__c</fullName>
    <label>DataRaptor Bundle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>